Properties dialogs created by addons via wm.invoke_props_dialog() jump around vertically. #60608

Closed
opened 2019-01-18 01:48:02 +01:00 by Demeter Dzadik · 5 comments
Member

jumpy_dialog_bug.webm

Blender Version
Broken: ad707115d5
Worked: 2.79b

Description
Popup dialog box resets its vertical position after being moved. Very frustrating! :P

Exact steps for others to reproduce the error

  • Paste in this example code from the docs into the text editor
  • Run script.
  • Then move the popup dialog box around. Release it, then move your mouse a bit. If the bug didn't trigger the first time, it will trigger the second time.

I hope it's correct to put this under BF-Blender as opposed to Addons.

[jumpy_dialog_bug.webm](https://archive.blender.org/developer/F6322714/jumpy_dialog_bug.webm) **Blender Version** Broken: ad707115d5bc Worked: 2.79b **Description** Popup dialog box resets its vertical position after being moved. Very frustrating! :P **Exact steps for others to reproduce the error** - Paste in this example code from the [docs ](https://docs.blender.org/api/blender_python_api_2_77_0/bpy.props.html#operator-example) into the text editor - Run script. - Then move the popup dialog box around. Release it, then move your mouse a bit. If the bug didn't trigger the first time, it will trigger the second time. I hope it's correct to put this under BF-Blender as opposed to Addons.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Seems like it could be related to #52999

Seems like it could be related to #52999

This issue was referenced by 72b9ab5a22

This issue was referenced by 72b9ab5a2249468d8e8c663005e655307fc468f8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60608
No description provided.