Fix T60608: Popup dialogs Y-axis reset after drag

Caused by fc32bd729c5b7